[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/dark_mage.png" type="Texture" id=1]
[ext_resource path="res://Assets/Animations/damage_anim.tres" type="Animation" id=2]
[ext_resource path="res://Assets/Enemy/World Enemy/World_Dark_Mage.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="Animation" id=5]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 5, 0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="World_Dark_Mage" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
hframes = 4
vframes = 5

[node name="Damage_Area" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Damage_Area"]
shape = SubResource( 1 )

[node name="Change_Position_Timer" type="Timer" parent="."]

[node name="Animation_Player" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 5 )
anims/RESET = SubResource( 2 )
anims/damage_anim = ExtResource( 2 )
anims/hide = SubResource( 3 )
anims/show = SubResource( 4 )

[connection signal="area_entered" from="Damage_Area" to="." method="_on_Damage_Area_area_entered"]
[connection signal="timeout" from="Change_Position_Timer" to="." method="_on_Change_Position_Timer_timeout"]
